--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-wws",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A library of Watson Work Services nodes for node-red",
   "author": "Benedikt Müller <mueller@me.com>",
   "repository": "bndkt/node-red-contrib-wws",
@@ -9,7 +9,7 @@
     "request-promise-native": "latest",
     "body-parser": "latest"
   },
-  "keywords": [ "node-red" ],
+  "keywords": [ "node-red", "wws" ],
   "node-red": {
     "nodes": {
       "wws-application": "wws-application/wws-application.js",
