--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "node-red-contrib-wws",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A library of Watson Work Services nodes for node-red",
-  "author": "Benedikt Müller <mueller@me.com>",
+  "author": "Benedikt Müller <benedikt.mueller@de.ibm.com>",
   "repository": "bndkt/node-red-contrib-wws",
   "dependencies": {
     "request": "latest",
@@ -14,7 +14,8 @@
     "nodes": {
       "wws-application": "wws-application/wws-application.js",
       "wws-message-post": "wws-message-post/wws-message-post.js",
-      "wws-webhook": "wws-webhook/wws-webhook.js"
+      "wws-webhook": "wws-webhook/wws-webhook.js",
+      "wws-graphql": "wws-graphql/wws-graphql.js"
     }
   }
 }
