--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
-  "name": "node-red-contrib-wws",
-  "version": "0.1.0",
-  "description": "A library of Watson Work Services nodes for node-red",
-  "author": "Benedikt Müller <benedikt.mueller@de.ibm.com>",
-  "repository": "bndkt/node-red-contrib-wws",
-  "dependencies": {
-    "request": "latest",
-    "request-promise-native": "latest",
-    "body-parser": "latest"
-  },
-  "keywords": [ "node-red", "wws" ],
-  "node-red": {
-    "nodes": {
-      "wws-application": "wws-application/wws-application.js",
-      "wws-message-post": "wws-message-post/wws-message-post.js",
-      "wws-file-post": "wws-file-post/wws-file-post.js",
-      "wws-webhook": "wws-webhook/wws-webhook.js",
-      "wws-graphql": "wws-graphql/wws-graphql.js"
-    }
-  }
+    "name": "node-red-contrib-wws",
+    "version": "1.0.0",
+    "description": "Node-RED nodes to integrate with IBM Watson Workspace",
+    "dependencies": {
+        "body-parser": "^1.18.2",
+        "simple-oauth2": "^1.5.2",
+        "javascript-state-machine": "^3.0.1",
+        "follow-redirects": "^1.3.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/stefanopog/node-red-contrib-wws.git"
+    },
+    "license": "Apache-2.0",
+    "keywords": [
+        "wws",
+        "watson",
+        "work",
+        "space",
+        "workspace",
+        "node-red"
+    ],
+    "node-red": {
+        "nodes": {
+            "wws-credentials": "wws-credentials/wws-credentials.js",
+            "wws-file-post": "wws-file-post/wws-file-post.js",
+            "wws-graphql": "wws-graphql/wws-graphql.js",
+            "wws-message-post": "wws-message-post/wws-message-post.js",
+            "wws-webhook:": "wws-webhook/wws-webhook.js"
+        }
+    },
+    "contributors": [
+    		"Arne Sutor <arne.sutor@de.ibm.com> (https://www.ibm.com/collaboration/collaboration-tools/watson-work/workspace)",
+    		"Benedikt Müller <benedikt.mueller@de.ibm.com>"
+    ]
 }
