--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
     "name": "node-red-contrib-wws",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "Node-RED nodes to integrate with IBM Watson Workspace",
     "dependencies": {
         "body-parser": "^1.18.2",
         "simple-oauth2": "^1.5.2",
         "javascript-state-machine": "^3.0.1",
-        "follow-redirects": "^1.3.0"
+        "follow-redirects": "^1.3.0",
+        "request-promise-native": "^1.0.5",
+        "request": "^2.87.0"
     },
     "repository": {
         "type": "git",
