--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-red-contrib-wws",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "description": "Node-RED nodes to integrate with IBM Watson Workspace",
     "dependencies": {
         "body-parser": "^1.18.2",
@@ -29,7 +29,8 @@
             "wws-file-post": "wws-file-post/wws-file-post.js",
             "wws-graphql": "wws-graphql/wws-graphql.js",
             "wws-message-post": "wws-message-post/wws-message-post.js",
-            "wws-webhook:": "wws-webhook/wws-webhook.js"
+            "wws-webhook:": "wws-webhook/wws-webhook.js",
+            "wws-focus:": "wws-focus/wws-focus.js"
         }
     },
     "contributors": [
