--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "follow-redirects": "^1.3.0",
         "request-promise-native": "^1.0.5",
         "request": "^2.87.0",
-        "crypto": "^1.0.1"
+        "crypto": "^1.0.1",
+        "raw-body": "^2.2.0"
     },
     "repository": {
         "type": "git",
